Fixed sidebar not showing

--- a/src/components/sidebar/sidebar.styles.css
+++ b/src/components/sidebar/sidebar.styles.css
@@ -4,13 +4,14 @@
   font-family: "Poppins", sans-serif;
   border-right: 3px solid #707070;
   clip-path: inset(0px -20px 0px 0px);
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 9vh;
   transition: 0.3s ease;
   background-color: white;
   box-shadow: inset 0 20px 20px -20px #606060;
   box-sizing: border-box;
+  z-index: 99;
 }
 
 .invisible {
