--- a/src/pages/loginpage/loginpage.styles.scss
+++ b/src/pages/loginpage/loginpage.styles.scss
@@ -2,7 +2,7 @@
   width: 350px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   padding: 60px 60px;
   background-color: white;
   border: 1px solid #707070;
